--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="9dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/saved"
+        app:layout_constraintTop_toBottomOf="@id/catLayout"
         tools:context=".MainActivity">
 
         <LinearLayout
@@ -36,23 +36,14 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <ImageView
-        android:id="@+id/saved"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toTopOf="@id/nested"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_bookmark_24"
-        app:tint="#002EFF" />
 
     <LinearLayout
+        android:id="@+id/catLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/saved"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
